--- a/html/index.html
+++ b/html/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness Gym</title>
-    <link rel="icon" type="image/png" href="/images/gym.png">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" type="image/png" href="/Fitness_Gym/images/gym.png">
+    <link rel="stylesheet" href="/Fitness_Gym/css/style.css">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
     rel="stylesheet"/>
@@ -116,25 +116,25 @@
             </p>
         </div>
         <div class="team_card">
-            <img src="/images/trainer1.jpg" alt="Sarah - Boxer" class="team_img">
+            <img src="/Fitness_Gym/images/trainer1.jpg" alt="Sarah - Boxer" class="team_img">
             <div class="team_info">
                 <p class="trainer_name">Sarah<br/>Boxer</p>
             </div>
         </div>
         <div class="team_card">
-            <img src="/images/trainer2.jpg" alt="Abby - Pilates" class="team_img">
+            <img src="/Fitness_Gym/images/trainer2.jpg" alt="Abby - Pilates" class="team_img">
             <div class="team_info">
                 <p class="trainer_name">Abby<br/>Pilates</p>
             </div>
         </div>
         <div class="team_card">
-            <img src="/images/trainer3.jpg" alt="James - Strength and Conditioning Coach" class="team_img">
+            <img src="/Fitness_Gym/images/trainer3.jpg" alt="James - Strength and Conditioning Coach" class="team_img">
             <div class="team_info">
                 <p class="trainer_name">James<br/>Strength and Conditioning Coach</p>
             </div>
         </div>
         <div class="team_card">
-            <img src="/images/trainer4.jpg" alt="Matt - Personal Trainer" class="team_img">
+            <img src="/Fitness_Gym/images/trainer4.jpg" alt="Matt - Personal Trainer" class="team_img">
             <div class="team_info">
                 <p class="trainer_name">Matt<br/>Personal Trainer</p>
             </div>
@@ -186,6 +186,6 @@
         </div>
     </div>
     
-    <script src="/js/script.js"></script>
+    <script src="/Fitness_Gym/js/script.js"></script>
 </body>
 </html>
